<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.dashboard.fragment.AddTaskFragment">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:padding="@dimen/dp_6"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_add_task"
            style="@style/roboto_regular_400"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_16"
            android:paddingVertical="@dimen/dp_18"
            android:text="@string/add_task"
            android:textSize="@dimen/sp_22"
            app:layout_constraintBottom_toBottomOf="@+id/img_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_back"
            app:layout_constraintTop_toTopOf="@+id/img_back" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_36"
            android:layout_marginTop="@dimen/dp_15"
            android:hint="@string/task_title"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/sp_16"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_add_task">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:textColor="@color/black"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_time"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_36"
            android:layout_marginEnd="@dimen/dp_20"
            android:hint="@string/time"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/til_meridiem_am_pm"
            app:layout_constraintEnd_toStartOf="@id/til_meridiem_am_pm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/til_meridiem_am_pm">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:focusable="false"
                android:inputType="none"
                android:maxLength="5"
                android:maxLines="1"
                android:textColor="@color/black"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_meridiem_am_pm"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="@dimen/dp_100"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_36"
            android:layout_marginEnd="@dimen/dp_36"
            android:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_title">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/dropdown_am_pm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="none"
                tools:ignore="KeyboardInaccessibleWidget,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_0"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_4"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/dark_magenta"
            app:backgroundTint="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/btn_add"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_time"
            app:strokeColor="@color/dark_gray"
            app:strokeWidth="@dimen/dp_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_0"
            android:layout_marginStart="@dimen/dp_4"
            android:text="@string/add"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="@+id/btn_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_cancel"
            app:layout_constraintTop_toTopOf="@+id/btn_cancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>