...
                android:background="@drawable/shape_rectangle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_task_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/dp_2"
                    android:overScrollMode="never"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
...

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_20"
            android:backgroundTint="@color/light_pink"
            android:contentDescription=""
            android:src="@drawable/ic_add"
...
